// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check List component should render component and match snapshot 1`] = `
<section class="fk-check-list fk-check-list--orange">
    <flex align="top">
        <icon icon="checkmark" color="orange" class="fk-check-list__icon"></icon>
        <flex column="">
            <p class="fk-check-list__placeholder"> some text goes here </p>
        </flex>
    </flex>
</section>
`;

exports[`Check List component should render component with bold text 1`] = `
<section class="fk-check-list fk-check-list--orange fk-check-list--bold">
    <flex align="top">
        <icon icon="checkmark" color="orange" class="fk-check-list__icon"></icon>
        <flex column=""><b class="fk-check-list__placeholder"> some text goes here </b> </flex>
    </flex>
</section>
`;
